20130924 (1132 prefixes)
  added: alchemy,archdesc,cosmo,cro,dbpo,dt,frbrer,frsad,gndo,icane,ludo,oj,oliasystem,orca,saif,sdmxa,sdmxd,stream,tsioc,twaapi,wd,who,wikidata
  changed: agrelon,cnt,co,sdo,yago

  made REVERSE reproducible
  improved command line client

20130816 (1109 prefixes)
  added: fea,penis,scms,sdo,wapp

  improved update process
  remove .bak files

20130812 (1104 prefixes)
  added: lldr,up
  changed: copyright
20130802 (1102 prefixes)
  added: algo,bsb,centrifuge,cex,cf,cidoc,crtv,dbc,dbnary,dbpr,dbt,dctypes,dis,dvia,ebu,ecb,ecpo,exterms,frapo,geof,geofla,gfo,hifm,httpm,iot,itsrdf,kbp,l4lod,laabs,locwd,mods,namespaces,nif,nsl,odcs,oecd,omn,opmw,oslc,pam,penn,pkgsrc,ple,poste,premis,prolog,qrl,qvoc,radion,rdarole,rdf123,reve,rlno,rlnr,rlog,roevo,roterms,sci,sem,site,stac,stats,wf4ever,wfm,wfs,wikterms,wl,won,worldbank
  changed: b2bo,biocore,cito,dita,dso,lgd,lv,oa,osr,pr,req,ro,voaf

  fixed bug in test of RDF::NS::Trine (https://github.com/nichtich/RDF-NS/issues/4)
  rdfns now emits plain URLs without format

20130402 (1033 prefixes)
  added: dcm,gnvc,occult,pizza,role
  changed: w3po

  fixed bug in PREFIXES, caused by returning from an each-loop

20130327 (1028 prefixes)
  added: agls,agrelon,aigp,aos,api,being,bf,bif,biotop,biro,cb,cgov,city,cold,coll,comm,coun,cpa,crsw,csp,ctorg,dbtont,dcite,dcndl,deo,dl,doco,dqm,dr,drm,ds,dso,ecos,edgar,elec,emp,ep,fcp,fowl,gadm,gastro,geod,geosp,gnm,graffle,graves,gso,infor,inno,iol,itsmo,lcy,lh,lingvo,lmm1,lmm2,lsc,mads,mds,meb,mil,mime,moac,mrel,msr,mvco,ntag,nyt,obsm,odapp,odpart,odv,oecc,ontopic,opl,opmo,oprovo,ordf,osadm,osgeom,osp,osr,osspr,ostop,part,passim,prvt,pso,ptop,pwo,quty,raul,rdafrbr,rdag1,rdag3,rdarel,semio,seq,situ,snarm,spt,swpo,tao,te,tis,trait,turismo,tvc,vocab,vrank,wlo,wsl,xmp,zoomaterms
  changed: acm,br,crm,disco,dita,food,idemo,lib,ps,s2s,sc,sec
20130208 (914 prefixes)