@@ -2,7 +2,7 @@ use strict;
 use warnings;
 package App::rdfns;
 {
-  $App::rdfns::VERSION = '20130924';
+  $App::rdfns::VERSION = '20130926';
 }
 #ABSTRACT: quickly get common URI namespaces
 #VERSION
@@ -48,7 +48,11 @@ sub run {
                 print STDERR "Unknown format: $f\n";
             }
         }
-        print map {"$_\n"} $ns->FORMAT( $format, $a );
+        if ( lc($format) eq 'json' ) {
+            say join ",\n", $ns->FORMAT( $format, $a );
+        } else {
+            say $_ for $ns->FORMAT( $format, $a );
+        }
     }
 }
 
@@ -56,12 +60,12 @@ sub usage {
     print <<'USAGE';
 USAGE: rdfns { [YYYYMMDD] ( <prefix[es]>[.format] | prefix:name | URL ) }+
 
-  formats: txt, sparql, ttl, n3, xmlns, beacon, prefix
+  formats: txt, sparql, ttl, n3, xmlns, json, beacon, prefix
  
   examples:
     rdfns 20111102 foaf,owl.ttl
     rdfns foaf.xmlns foaf.n3
-	rdfns rdfs:seeAlso
+    rdfns rdfs:seeAlso
     rdfns http://www.w3.org/2003/01/geo/wgs84_pos#
     rdfns wgs.prefix
 USAGE
@@ -69,8 +73,8 @@ USAGE
 
 1;
 
-__END__
 
+__END__
 =pod
 
 =head1 NAME
@@ -79,7 +83,13 @@ App::rdfns - quickly get common URI namespaces
 
 =head1 VERSION
 
-version 20130924
+version 20130926
+
+=head1 SEE ALSO
+
+This module implements the command line client L<rdfns>.
+
+=encoding utf8
 
 =head1 AUTHOR
 
@@ -93,3 +103,4 @@ This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
 
 =cut
+
